[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lions-eco"
version = "0.1.0"
description = "Filesystem-native execution runner for crystallized ecology directories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
dependencies = [
  "lionscliapp",
]

[project.scripts]
eco = "lions_eco.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
